[gd_scene load_steps=6 format=2]

[ext_resource path="res://VRControl/VRControl.gd" type="Script" id=1]
[ext_resource path="res://VRControl/ARVROrigin.gd" type="Script" id=2]
[ext_resource path="res://addons/godot-openvr/scenes/ovr_controller.tscn" type="PackedScene" id=3]
[ext_resource path="res://addons/vr-common/functions/Function_Pickup.tscn" type="PackedScene" id=4]
[ext_resource path="res://Tool/BrushHandle.tscn" type="PackedScene" id=5]

[node name="VRControl" type="Spatial"]
script = ExtResource( 1 )

[node name="ARVROrigin" type="ARVROrigin" parent="."]
script = ExtResource( 2 )

[node name="ARVRCamera" type="ARVRCamera" parent="ARVROrigin"]

[node name="OVRControllerLeft" parent="ARVROrigin" instance=ExtResource( 3 )]
visible = false

[node name="MeshInstance" type="MeshInstance" parent="ARVROrigin/OVRControllerLeft"]

[node name="Function_Pickup" parent="ARVROrigin/OVRControllerLeft" instance=ExtResource( 4 )]

[node name="OVRControllerRight" parent="ARVROrigin" instance=ExtResource( 3 )]
visible = false
controller_id = 2

[node name="MeshInstance" type="MeshInstance" parent="ARVROrigin/OVRControllerRight"]

[node name="Function_Pickup" parent="ARVROrigin/OVRControllerRight" instance=ExtResource( 4 )]

[node name="BrushHandle" parent="." instance=ExtResource( 5 )]
initial_owner = NodePath("../ARVROrigin/OVRControllerRight/Function_Pickup")
[connection signal="brush_segment" from="BrushHandle" to="." method="brush_segment"]
[connection signal="brush_stroke_ended" from="BrushHandle" to="." method="brush_stroke_ended"]
[connection signal="brush_stroke_started" from="BrushHandle" to="." method="brush_stroke_started"]
